[Win] Retrieve all following WM_CHAR events at the beginning of processing WM_KEYDOWN event https://bugs.webkit.org/show_bug.cgi?id=204694

Reviewed by Ross Kirsling.

Source/WebKit:

In Windows ports, WM_KEYDOWN dispatches keydown event, and
WM_CHAR dispatches keypress event. If a keydown event is canceled
by calling preventDefault, the following corresponding keypress
events shouldn't be dispatched.

WebKit1 implemented it by removing WM_CHAR events if the keydown
event is consumed. However, WebKit2 can't do so because WebKit2
processes key events asynchronously. Thus, retrieve all following
WM_CHAR events, and dispatch them after processing the keydown
and if it is not consumed.

In addition to that, retrieving following WM_CHAR events is needed
to fix Bug 204672 because the events are needed for 'key' property
of keydown KeyboardEvent for dead key combination.

Gecko and Chromium also implements 'key' property in the same approach.

Test: Covered by existing fast/events/inputText-never-fired-on-keydown-cancel.html and fast/events/keydown-keypress-preventDefault.html

* Shared/NativeWebKeyboardEvent.h: Added m_pendingCharEvents as Vector<MSG>.
(WebKit::NativeWebKeyboardEvent::pendingCharEvents const):
* Shared/win/NativeWebKeyboardEventWin.cpp:
(WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didReceiveEvent):
* UIProcess/WebPageProxy.h:
* UIProcess/win/WebPageProxyWin.cpp:
(WebKit::WebPageProxy::dispatchPendingCharEvents):
* UIProcess/win/WebView.cpp:
(WebKit::WebView::onKeyEvent):

Source/WebKitLegacy/win:

* WebView.cpp:
(WebView::keyDown): Added a variable pendingCharEvents of
Vector<MSG> to preserve following WM_CHAR events. Dispatch them if
the WM_KEYDOWN isn't consumed.

Canonical link: https://commits.webkit.org/217949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252976 268f45cc-cd09-0410-ab3c-d52691b4dbfc