Source/WebKit/Shared/win/NativeWebKeyboardEventWin.cpp
@@ -33,9 +33,10 @@ namespace WebKit {
 
 using namespace WebCore;
 
-NativeWebKeyboardEvent::NativeWebKeyboardEvent(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
+NativeWebKeyboardEvent::NativeWebKeyboardEvent(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam, Vector<MSG>&& pendingCharEvents)
     : WebKeyboardEvent(WebEventFactory::createWebKeyboardEvent(hwnd, message, wParam, lParam))
     , m_nativeEvent(createNativeEvent(hwnd, message, wParam, lParam))
+    , m_pendingCharEvents(WTFMove(pendingCharEvents))
 {
 }
 
