Source/WebKit/UIProcess/win/WebPageProxyWin.cpp
@@ -27,6 +27,7 @@
 #include "config.h"
 #include "WebPageProxy.h"
 
+#include "NativeWebKeyboardEvent.h"
 #include "PageClientImpl.h"
 #include <WebCore/SearchPopupMenuDB.h>
 #include <WebCore/UserAgent.h>
@@ -86,5 +87,11 @@ void WebPageProxy::setDevice(ID3D11Device1* device)
 }
 #endif
 
+void WebPageProxy::dispatchPendingCharEvents(const NativeWebKeyboardEvent& keydownEvent)
+{
+    auto& pendingCharEvents = keydownEvent.pendingCharEvents();
+    for (auto it = pendingCharEvents.rbegin(); it != pendingCharEvents.rend(); it++)
+        m_keyEventQueue.prepend(NativeWebKeyboardEvent(it->hwnd, it->message, it->wParam, it->lParam, { }));
+}
 
 } // namespace WebKit
